PROJECT(Dilithium)

CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

SET(DILITHIUM_MAJOR_VERSION 0)
SET(DILITHIUM_MINOR_VERSION 1)
SET(DILITHIUM_PATCH_VERSION 0)
SET(DILITHIUM_VERSION ${DILITHIUM_MAJOR_VERSION}.${DILITHIUM_MINOR_VERSION}.${DILITHIUM_PATCH_VERSION})

SET(DILITHIUM_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

INCLUDE(${DILITHIUM_ROOT_DIR}/cmake/Common.cmake)
INCLUDE(${DILITHIUM_ROOT_DIR}/cmake/Platform.cmake)
INCLUDE(${DILITHIUM_ROOT_DIR}/cmake/Compiler.cmake)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(BOOST_ROOT "${DILITHIUM_ROOT_DIR}/External/boost" CACHE STRING "The root folder of your boost.")
FIND_PACKAGE(Boost)

SET(DILITHIUM_OUTPUT_DIR "${DILITHIUM_ROOT_DIR}/Lib/${DILITHIUM_PLATFORM_NAME}")
SET(DILITHIUM_BIN_DIR "${DILITHIUM_ROOT_DIR}/Bin/${DILITHIUM_PLATFORM_NAME}")

INCLUDE_DIRECTORIES(${DILITHIUM_ROOT_DIR}/Include)

ADD_SUBDIRECTORY(Src)
ADD_SUBDIRECTORY(Tools/DilithiumDisasm)
