SET(LIB_NAME Dilithium)

SET(DETAIL_HEADER_FILES
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Detail/AutoLink.hpp
)

SET(DXC_HLSL_HEADER_FILES
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/dxc/HLSL/DxilContainer.hpp
)

SET(HEADER_FILES
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Compiler.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Dilithium.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Util.hpp
)
SET(SOURCE_FILES
	${DILITHIUM_ROOT_DIR}/Src/HLSL/DxilContainer.cpp
)

SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
SOURCE_GROUP("Header Files\\Detail" FILES ${DETAIL_HEADER_FILES})
SOURCE_GROUP("Header Files\\dxc\\HLSL" FILES ${DXC_HLSL_HEADER_FILES})

ADD_DEFINITIONS(-DDILITHIUM_SOURCE)

ADD_LIBRARY(${LIB_NAME} STATIC
	${HEADER_FILES} ${DETAIL_HEADER_FILES} ${DXC_HLSL_HEADER_FILES}
	${SOURCE_FILES} 
)

SET(LIB_OUTPUT_NAME ${LIB_NAME}${DILITHIUM_OUTPUT_SUFFIX})

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY ${DILITHIUM_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${DILITHIUM_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${DILITHIUM_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${DILITHIUM_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${DILITHIUM_OUTPUT_DIR}
	PROJECT_LABEL ${LIB_NAME}
	DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX}
	OUTPUT_NAME ${LIB_OUTPUT_NAME}
)

TARGET_LINK_LIBRARIES(${LIB_NAME})
