SET(LIB_NAME Dilithium)

SET(CXX17_HEADER_FILES
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/CXX17/string_view.hpp
)

SET(DETAIL_HEADER_FILES
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Detail/AutoLink.hpp
)

SET(DXC_HLSL_HEADER_FILES
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/dxc/HLSL/DxilConstants.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/dxc/HLSL/DxilContainer.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/dxc/HLSL/DxilPipelineStateValidation.hpp
)

SET(HEADER_FILES
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/BasicBlock.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/BitcodeReader.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/BitCodes.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/BitstreamReader.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Compiler.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Constant.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Dilithium.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/ErrorHandling.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Function.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/GlobalObject.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/GlobalValue.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/LLVMBitCodes.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/LLVMContext.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/LLVMModule.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/MemStreamBuf.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/User.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Util.hpp
	${DILITHIUM_ROOT_DIR}/Include/Dilithium/Value.hpp
	${DILITHIUM_ROOT_DIR}/Src/LLVMContextImpl.hpp
)

SET(HLSL_SOURCE_FILES
	${DILITHIUM_ROOT_DIR}/Src/HLSL/DxilContainer.cpp
)

SET(SOURCE_FILES
	${DILITHIUM_ROOT_DIR}/Src/BitcodeReader.cpp
	${DILITHIUM_ROOT_DIR}/Src/BitstreamReader.cpp
	${DILITHIUM_ROOT_DIR}/Src/ErrorHandling.cpp
	${DILITHIUM_ROOT_DIR}/Src/LLVMContext.cpp
	${DILITHIUM_ROOT_DIR}/Src/LLVMContextImpl.cpp
	${DILITHIUM_ROOT_DIR}/Src/LLVMModule.cpp
	${DILITHIUM_ROOT_DIR}/Src/MemStreamBuf.cpp
)

SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
SOURCE_GROUP("Source Files\\HLSL" FILES ${HLSL_SOURCE_FILES})
SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
SOURCE_GROUP("Header Files\\CXX17" FILES ${CXX17_HEADER_FILES})
SOURCE_GROUP("Header Files\\Detail" FILES ${DETAIL_HEADER_FILES})
SOURCE_GROUP("Header Files\\dxc\\HLSL" FILES ${DXC_HLSL_HEADER_FILES})

ADD_DEFINITIONS(-DDILITHIUM_SOURCE)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

ADD_LIBRARY(${LIB_NAME} STATIC
	${HEADER_FILES} ${CXX17_HEADER_FILES} ${DETAIL_HEADER_FILES} ${DXC_HLSL_HEADER_FILES}
	${SOURCE_FILES} ${HLSL_SOURCE_FILES}
)

SET(LIB_OUTPUT_NAME ${LIB_NAME}${DILITHIUM_OUTPUT_SUFFIX})

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY ${DILITHIUM_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${DILITHIUM_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${DILITHIUM_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${DILITHIUM_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${DILITHIUM_OUTPUT_DIR}
	PROJECT_LABEL ${LIB_NAME}
	DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX}
	OUTPUT_NAME ${LIB_OUTPUT_NAME}
)

TARGET_LINK_LIBRARIES(${LIB_NAME})
