SET(EXE_NAME DilithiumDisasm)

SET(HEADER_FILES ""
)
SET(SOURCE_FILES
	${DILITHIUM_ROOT_DIR}/Tools/DilithiumDisasm/DilithiumDisasm.cpp
)

SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${DILITHIUM_ROOT_DIR}/Lib/${DILITHIUM_PLATFORM_NAME})

ADD_EXECUTABLE(${EXE_NAME} ${SOURCE_FILES} ${HEADER_FILES})
ADD_DEPENDENCIES(${EXE_NAME} "Dilithium")

IF(NOT DILITHIUM_COMPILER_MSVC)
	SET(EXTRA_LINKED_LIBRARIES
		debug Dilithium${DILITHIUM_OUTPUT_SUFFIX}_d optimized Dilithium${DILITHIUM_OUTPUT_SUFFIX}
	)
ENDIF()

SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES
	PROJECT_LABEL ${EXE_NAME}
	DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX}
	OUTPUT_NAME ${EXE_NAME}
)

TARGET_LINK_LIBRARIES(${EXE_NAME}
	${EXTRA_LINKED_LIBRARIES})

ADD_POST_BUILD(${EXE_NAME} ${DILITHIUM_BIN_DIR})

INSTALL(TARGETS ${EXE_NAME}
	RUNTIME DESTINATION ${DILITHIUM_BIN_DIR}
	LIBRARY DESTINATION ${DILITHIUM_BIN_DIR}
	ARCHIVE DESTINATION ${DILITHIUM_OUTPUT_DIR}
)

IF(MSVC)
	CREATE_VCPROJ_USERFILE(${EXE_NAME})
ENDIF()